--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html{
+  overflow: hidden;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,52 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.boatSvg{
+  bottom: 0;
+  position: absolute;
+  height: 260px;
+  width: 260px;
+  z-index: 4;
+  right: -100%;
+  animation: boat-anim 220s linear infinite, invertion 220s step-end infinite, up-down 7s linear infinite;
+}
+@media screen and (max-width: 850px){
+  .boatSvg{
+    height: 200px;
+    width: 200px;
+    bottom: -10px;
+  }    
+}
+
+@keyframes boat-anim {
+  0%{
+    right: -280px;
+  }
+  50%{
+    right: calc(100% + 20px);
+  }
+  100%{
+    right: -280px;
+  }
+}
+@keyframes invertion {
+  50%{
+    transform: scaleX(-1);
+  }
+}
+@keyframes up-down {
+  0%{
+    bottom: -2px;
+  }
+  25%{
+  }
+  50%{
+    bottom: 12px;
+  }
+  75%{
+  }
+  100%{
+    bottom: -2px;
+  }
 }
